# varKoder

./: .gitignore  Dockerfile  MANIFEST.in  README.md  barcode_tool_split_threaded.py  barcode_tool_v2.py  environment.yml  environment_linux.yml  functions.py  kmer_mapping.parquet  pyproject.toml  setup.py  varKode.py  varKoder.py
conda_environments/: docker.yml  linux.yml  mac.yml
docs/: convert.md  image.md  query.md  train.md
kmer_mapping/: 7mer_mapping.parquet  9mer_mapping.parquet
tests/: 01_download_fastqs.sh  02_constants.sh  02_run_tests.sh  03_test_installation.sh  Bembidion.csv
varKoder/: __init__.py  __main__.py  cli.py  functions.py  varKoder.py
varKoder/commands/: __init__.py  convert.py  image.py  query.py  train.py
varKoder/core/: config.py  utils.py
varKoder/kmer_mapping/: 5mer_mapping.parquet  6mer_mapping.parquet  7mer_mapping.parquet  8mer_mapping.parquet  9mer_mapping.parquet
varKoder/models/: architectures.py  metrics.py
xtra_scripts/: docker_build.sh  push_to_hf.py  push_to_hf.sh  tests.sh
