[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varKoder"
version = "1.4.0.dev0"
description = "A tool that uses variation in K-mer frequencies as DNA barcodes."
authors = [
    {name = "Bruno de Medeiros", email = "bdemedeiros@fieldmuseum.org"},
]
license = {text = "GNU General Public License"}
urls = {Homepage = "https://github.com/brunoasm/varKoder"}
requires-python = ">=3.11"
dependencies = [
    "torch",
    "fastai",
    "timm",
    "pyarrow",
    "pandas",
    "humanfriendly",
    "tenacity",
    "huggingface_hub[fastai]",
]

[project.scripts]
varKoder = "varKoder.cli:main"

[tool.setuptools]
packages = ["varKoder", "varKoder.core", "varKoder.commands", "varKoder.models", "varKoder.processing"]
include-package-data = true

[tool.setuptools.package-data]
varKoder = ["kmer_mapping/*"]
